sandra web components

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 body {
-  background: rgba(1.96%, 3.92%, 5.88%, 1);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
